# uav_core

./: .gitignore  ANO_Pioneer.uvgui.penper  ANO_Pioneer.uvgui.yuanxd  ANO_Pioneer.uvgui_penper.bak  ANO_Pioneer.uvgui_yuanxd.bak  ANO_Pioneer.uvopt  ANO_Pioneer.uvproj  ANO_Pioneer_Ano_Pioneer.dep  ANO_Pioneer_uvopt.bak  ANO_Pioneer_uvproj.bak  CMakeLists.txt  README.md
SRC/applications/: Ano_DT.c  Ano_DT.h  Ano_OF.c  Ano_Parameter.c  Ano_Parameter.h  Ano_RC.c  Ano_Scheduler.c  BSP_Init.c  include.h  main.c  nrf_rc.c  nrf_rc.h  uwb.c  uwb.h
SRC/drivers/: Drv_icm20602.c  Drv_led.c  Drv_usart.c  Drv_usart.h
SRC/fc_general/: Ano_FcData.h  Ano_Pid.c
SRC/fc_specific/: Ano_AltCtrl.c  Ano_AttCtrl.c  Ano_AttCtrl.h  Ano_FlightCtrl.c  Ano_FlightDataCal.c  Ano_LocCtrl.c  Ano_MagProcess.c  Ano_MotorCtrl.c  Ano_Power.c  config.h
doc/: record.txt
vital_txt_to_read/: 各个模块注意的地方.txt  解锁飞机指令.txt
xmind/: UVA_CORE CODE.xmind
