cmake_minimum_required(VERSION 3.12)
project(uav_core C)

set(CMAKE_C_STANDARD 11)

include_directories(Libraries/CMSIS/Include)
include_directories(Libraries/CMSIS/ST/STM32F4xx/Include)
include_directories(Libraries/STM32F4xx_StdPeriph_Driver/inc)
include_directories(Libraries/USBStack/INC)
include_directories(Libraries/VL53L0X/inc)
include_directories(SRC/applications)
include_directories(SRC/drivers)
include_directories(SRC/fc_general)
include_directories(SRC/fc_specific)

add_executable(uav_core
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q7.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_f32.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q15.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q31.c
        Libraries/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q7.c
        Libraries/CMSIS/DSP_Lib/Source/CommonTables/arm_common_tables.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_q15.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_q31.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_sin_cos_f32.c
        Libraries/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_sin_cos_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sqrt_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sqrt_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q7.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q7.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q7.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_fast_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_fast_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_fast_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_fast_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q7.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q7.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q7.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q7.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_q31.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_q15.c
        Libraries/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_q31.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_f32.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_q15.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_q31.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_inverse_f32.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_f32.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_fast_q15.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_fast_q31.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_q15.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_q31.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_f32.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_q15.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_q31.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_f32.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_q15.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_q31.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_f32.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_q15.c
        Libraries/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_q31.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_f32.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q15.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q31.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q7.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_f32.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q15.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q31.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q7.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_f32.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q15.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q31.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q7.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_f32.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q15.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q31.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q7.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_f32.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_q15.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_q31.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_f32.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_q15.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_q31.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_f32.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_q15.c
        Libraries/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_q31.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_f32.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q15.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q31.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q7.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_f32.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q15.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q31.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q7.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q15.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q31.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q7.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_float.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_q31.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_q7.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_float.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_q15.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_q7.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_float.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_q15.c
        Libraries/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_q31.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_f32.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_q15.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_q31.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_f32.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_q15.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_q31.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_f32.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_f32.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_q15.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_q31.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_q15.c
        Libraries/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_q31.c
        Libraries/CMSIS/Include/arm_common_tables.h
        Libraries/CMSIS/Include/arm_math.h
        Libraries/CMSIS/Include/core_cm0.h
        Libraries/CMSIS/Include/core_cm3.h
        Libraries/CMSIS/Include/core_cm4.h
        Libraries/CMSIS/Include/core_cm4_simd.h
        Libraries/CMSIS/Include/core_cmFunc.h
        Libraries/CMSIS/Include/core_cmInstr.h
        Libraries/CMSIS/ST/STM32F4xx/Include/stm32f4xx.h
        Libraries/CMSIS/ST/STM32F4xx/Include/system_stm32f4xx.h
        Libraries/CMSIS/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
        Libraries/STM32F4xx_StdPeriph_Driver/inc/misc.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_adc.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_can.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_crc.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_cryp.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dac.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dbgmcu.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dcmi.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dma.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_exti.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_flash.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_fsmc.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_gpio.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_hash.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_i2c.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_iwdg.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_pwr.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rcc.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rng.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rtc.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_sdio.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_spi.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_syscfg.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_tim.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_usart.h
        Libraries/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_wwdg.h
        Libraries/STM32F4xx_StdPeriph_Driver/src/misc.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_adc.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_can.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_crc.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_aes.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_des.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_tdes.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dac.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dbgmcu.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dcmi.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dma.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_exti.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_flash.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_fsmc.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_gpio.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_md5.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_sha1.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_i2c.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_iwdg.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_pwr.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rcc.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rng.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rtc.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_sdio.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_spi.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_syscfg.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_tim.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_usart.c
        Libraries/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_wwdg.c
        Libraries/USBStack/INC/rl_usb.h
        Libraries/USBStack/INC/RTL.h
        Libraries/USBStack/INC/usb.h
        Libraries/USBStack/INC/usb_cdc.h
        Libraries/USBStack/INC/usb_def.h
        Libraries/USBStack/INC/usb_for_lib.h
        Libraries/USBStack/INC/usb_hid.h
        Libraries/USBStack/INC/usb_lib.c
        Libraries/USBStack/INC/usb_lib.h
        Libraries/USBStack/INC/usb_msc.h
        Libraries/USBStack/INC/usbd_cdc.h
        Libraries/USBStack/INC/usbd_cdc_acm.h
        Libraries/USBStack/INC/usbd_core.h
        Libraries/USBStack/INC/usbd_core_cdc.h
        Libraries/USBStack/INC/usbd_core_hid.h
        Libraries/USBStack/INC/usbd_core_msc.h
        Libraries/USBStack/INC/usbd_desc.h
        Libraries/USBStack/INC/usbd_event.h
        Libraries/USBStack/INC/usbd_hid.h
        Libraries/USBStack/INC/usbd_hw.h
        Libraries/USBStack/INC/usbd_lib_cdc.h
        Libraries/USBStack/INC/usbd_lib_hid.h
        Libraries/USBStack/INC/usbd_lib_msc.h
        Libraries/USBStack/INC/usbd_msc.h
        Libraries/USBStack/SRC/usbd_cdc_acm.c
        Libraries/USBStack/SRC/usbd_core.c
        Libraries/USBStack/SRC/usbd_core_cdc.c
        Libraries/USBStack/SRC/usbd_core_hid.c
        Libraries/USBStack/SRC/usbd_core_msc.c
        Libraries/USBStack/SRC/usbd_hid.c
        Libraries/USBStack/SRC/usbd_msc.c
        Libraries/VL53L0X/inc/vl53l0x_api.h
        Libraries/VL53L0X/inc/vl53l0x_api_calibration.h
        Libraries/VL53L0X/inc/vl53l0x_api_core.h
        Libraries/VL53L0X/inc/vl53l0x_api_ranging.h
        Libraries/VL53L0X/inc/vl53l0x_api_strings.h
        Libraries/VL53L0X/inc/vl53l0x_def.h
        Libraries/VL53L0X/inc/vl53l0x_device.h
        Libraries/VL53L0X/inc/vl53l0x_i2c.h
        Libraries/VL53L0X/inc/vl53l0x_interrupt_threshold_settings.h
        Libraries/VL53L0X/inc/vl53l0x_platform.h
        Libraries/VL53L0X/inc/vl53l0x_platform_log.h
        Libraries/VL53L0X/inc/vl53l0x_tuning.h
        Libraries/VL53L0X/inc/vl53l0x_types.h
        Libraries/VL53L0X/src/vl53l0x_api.c
        Libraries/VL53L0X/src/vl53l0x_api_calibration.c
        Libraries/VL53L0X/src/vl53l0x_api_core.c
        Libraries/VL53L0X/src/vl53l0x_api_ranging.c
        Libraries/VL53L0X/src/vl53l0x_api_strings.c
        Libraries/VL53L0X/src/vl53l0x_i2c.c
        Libraries/VL53L0X/src/vl53l0x_platform.c
        SRC/applications/Ano_DT.c
        SRC/applications/Ano_DT.h
        SRC/applications/Ano_OF.c
        SRC/applications/Ano_OF.h
        SRC/applications/Ano_Parameter.c
        SRC/applications/Ano_Parameter.h
        SRC/applications/Ano_RC.c
        SRC/applications/Ano_RC.h
        SRC/applications/Ano_Scheduler.c
        SRC/applications/Ano_Scheduler.h
        SRC/applications/Ano_USB.c
        SRC/applications/Ano_USB.h
        SRC/applications/BSP_Init.c
        SRC/applications/BSP_Init.h
        SRC/applications/include.h
        SRC/applications/main.c
        SRC/applications/nrf_rc.c
        SRC/applications/nrf_rc.h
        SRC/applications/stm32f4xx_conf.h
        SRC/applications/stm32f4xx_it.c
        SRC/applications/usb_config.c
        SRC/applications/uwb.c
        SRC/applications/uwb.h
        SRC/drivers/Drv_adc.c
        SRC/drivers/Drv_adc.h
        SRC/drivers/Drv_ak8975.c
        SRC/drivers/Drv_ak8975.h
        SRC/drivers/Drv_i2c_soft.c
        SRC/drivers/Drv_i2c_soft.h
        SRC/drivers/Drv_icm20602.c
        SRC/drivers/Drv_icm20602.h
        SRC/drivers/Drv_led.c
        SRC/drivers/Drv_led.h
        SRC/drivers/Drv_pwm_in.c
        SRC/drivers/Drv_pwm_in.h
        SRC/drivers/Drv_pwm_out.c
        SRC/drivers/Drv_pwm_out.h
        SRC/drivers/Drv_spi.c
        SRC/drivers/Drv_spi.h
        SRC/drivers/Drv_spl06.c
        SRC/drivers/Drv_spl06.h
        SRC/drivers/Drv_time.c
        SRC/drivers/Drv_time.h
        SRC/drivers/Drv_usart.c
        SRC/drivers/Drv_usart.h
        SRC/drivers/Drv_vl53l0x.c
        SRC/drivers/Drv_vl53l0x.h
        SRC/drivers/Drv_w25qxx.c
        SRC/drivers/Drv_w25qxx.h
        SRC/drivers/usbd_STM32F4xx_FS.c
        SRC/fc_general/Ano_FcData.c
        SRC/fc_general/Ano_FcData.h
        SRC/fc_general/Ano_Filter.c
        SRC/fc_general/Ano_Filter.h
        SRC/fc_general/Ano_Imu.c
        SRC/fc_general/Ano_Imu.h
        SRC/fc_general/Ano_Math.c
        SRC/fc_general/Ano_Math.h
        SRC/fc_general/Ano_MotionCal.c
        SRC/fc_general/Ano_MotionCal.h
        SRC/fc_general/Ano_Navigate.c
        SRC/fc_general/Ano_Navigate.h
        SRC/fc_general/Ano_Pid.c
        SRC/fc_general/Ano_Pid.h
        SRC/fc_specific/Ano_AltCtrl.c
        SRC/fc_specific/Ano_AltCtrl.h
        SRC/fc_specific/Ano_AttCtrl.c
        SRC/fc_specific/Ano_AttCtrl.h
        SRC/fc_specific/Ano_FlightCtrl.c
        SRC/fc_specific/Ano_FlightCtrl.h
        SRC/fc_specific/Ano_FlightDataCal.c
        SRC/fc_specific/Ano_FlightDataCal.h
        SRC/fc_specific/Ano_LocCtrl.c
        SRC/fc_specific/Ano_LocCtrl.h
        SRC/fc_specific/Ano_MagProcess.c
        SRC/fc_specific/Ano_MagProcess.h
        SRC/fc_specific/Ano_MotorCtrl.c
        SRC/fc_specific/Ano_MotorCtrl.h
        SRC/fc_specific/Ano_Power.c
        SRC/fc_specific/Ano_Power.h
        SRC/fc_specific/config.h
        test/test_main.cpp)
